@@ -42,6 +42,7 @@ Bugs fixed:
 - 2893373 Test reports need to include xml results files
 - 2818014 EnumerateClasses segfault w/DeepInheritance prop setting
 - 2915957 Port 2192023 fix to classProvider and classProviderMem
+- 2919753 Some IndicationSubscriptions cannot be deleted
 
 Changes in 1.3.5
 ================
