@@ -1,3 +1,8 @@
+2009-12-22  Chris Buccella  <buccella@linux.vnet.ibm.com>
+
+	* interopProvider.c:
+	[ 2919753 ] Some IndicationSubscriptions cannot be deleted
+
 2009-12-21  Sean Swehla  <smswehla@linux.vnet.ibm.com>
 
 	* interopServerProvider.c, cmpidt.h
